    shouldn't be doing this at all, but we might as well do it properly!
    (Closes: #396162)
  * Add a sensible autoindex default config

  [ Peter Samuelson ]
  * Ship apache2.8 manpage in apache2.2-common.  (Closes: #391813)
  * New patch ajp_connection_reuse: fix connection reuse bug in
    mod_proxy_ajp.  (Closes: #396265)

 -- Tollef Fog Heen <tfheen@debian.org>  Sun, 29 Oct 2006 22:55:03 +0100

apache2 (2.2.3-3) unstable; urgency=medium

  [ Peter Samuelson ]
  * a2dismod: exit 0 if a module exists but is already disabled.
  * Ship a2enmod.8 and a2dismod.8 again, and expand them a bit.
    (Closes: #270551)

  [ Tollef Fog Heen ]
  * Build apache2-src package.
  * Do not AddDefaultCharset if we are proxying.  Closes: #277526
  * Do not forcefully link against libdb4.3 and other libs.
  * Enable the same list of modules as we had in 2.0 (by default) and do
    that for all older versions than 2.2.3-3 to fix upgrade issues people
    have had.  Closes: #392349
  * Set default IndexWidth to *.
  * Clean up CPPFLAGS and CFLAGS, including making all of CFLAGS a
    superset of CPPFLAGS.  Also make sure to include -I switches with
    absolute paths so the apache headers are useful.
  * Warn when not starting HTTPD due to missing apache binary.  
    Closes: #384128
  * Provide sample disk and memory cache configurations.  Closes: #278564
  * Provide dir.conf.   Closes: #392356
  * Add alternate dependency from apache to apache2-mpm-event
  * On reload, make the init script exit 1 with an error message if the
    configuration is broken.  Closes: #316858
  * Add default deflate.conf compressing text/html, text/plain and
    text/xml.  Closes: #349016
  * Add { and } around the usage format in the init script to make the
    init script bash completion happier.  Closes: #350606

  [ Adam Conrad ]
  * Update our php4 and php5 conflicts, to reflect the reality that each
    were uploaded and built again while apache2.2 was in the new queue.
    Closes: #392189